# pdf-holomask

./: .env.example  .gitignore  ENTITY_DETECTION.md  LICENSE  Makefile  README.md  entity_config.yaml  pyproject.toml
app/: main.py  mistral_analyzer.py  models.py  pdf_processor.py
docs/plans/: 2025-11-07-pdf-holomask-design.md
static/: index.html
tests/: __init__.py  conftest.py  test_api.py  test_mistral_analyzer.py  test_pdf_processor.py
